[gd_scene load_steps=2 format=3 uid="uid://bw7gdig0txoxx"]

[ext_resource type="Script" path="res://level/winning_screen.gd" id="1_dx8om"]

[node name="WinningScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dx8om")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -81.5
offset_right = 48.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="Winner" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "=YOU WIN="

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
